[package]
name = "web_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iron = "0.6.1"
router = "0.6"
logger = "0.4"
env_logger = "0.7"
serde = { version ="1.0.101", features = ["derive"]}
serde_json = "1.0.41"
chrono = { version = "0.4.9", features = ["serde"] }
uuid = { version = "0.7.4", features = ["v4", "serde"] }